examples/nginx/nginx-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
    - '*'
  gateways:
    - local-gateway
  http:
    - route:
      - destination:
          host: hello-world.default.svc.cluster.local
          port:
            number: 80
